# cargo-multivers

./: .clippy.toml  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  action.yml  build.rs  clippy.toml  committed.toml  deny.toml  target-cpus.txt
.github/action/: entrypoint.sh
.github/workflows/: ci.yml
multivers-runner/: Cargo.toml  Cargo.toml.template  README.md  build.rs
multivers-runner/src/: build.rs  impl.rs  lib.rs  main.rs
multivers-runner/src/impl/: generic.rs  linux.rs
src/: build.rs  cargo.rs  cli.rs  features.rs  main.rs  metadata.rs  multivers.rs  runner.rs  rustc.rs
tests/: cli.rs  test.rs
tests/cli/: help.toml  multiplebins-error-with-args.toml  multiplebins-error.toml  nobin.toml  print-cpu-features.toml
tests/cli/nobin.in/test-nobin/: Cargo.toml
tests/custom-runner/: Cargo.toml
tests/custom-runner/src/: main.rs
tests/test-argv/: Cargo.toml
tests/test-correct-build-used/: Cargo.toml
tests/test-correct-build-used/src/: main.rs
tests/test-multiplebins/: Cargo.toml
tests/test-nobin/: Cargo.toml
tests/test-nothing/: Cargo.toml  build.rs
tests/test-nothing/src/: main.rs
tests/test-useless-computation/: Cargo.toml
tests/test-useless-computation/src/: main.rs
tests/test-workspace/: Cargo.toml
tests/test-workspace/src/: main.rs
