[package]
name = "cargo-multivers"
version = "0.3.1"
description = "Cargo subcommand to build multiple versions of the same binary, each with a different CPU features set, merged into a single portable optimized binary"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["performance", "optimization", "cargo", "cpu", "features"]
rust-version = "1.64"
repository = "https://github.com/ronnychevalier/cargo-multivers"
include = [
    "/src/*",
    "/LICENSE*",
    "/multivers-runner/src/*.rs",
    "/multivers-runner/src/build/*.rs",
    "/multivers-runner/build.rs",
    "/multivers-runner/Cargo.*",
]

[dependencies]
anyhow = "1.0.68"
escargot = "0.5.7"
clap = { version = "4.2", features = ["derive", "cargo"] }
clap-cargo = { version = "0.10", features = ["cargo_metadata"] }
cargo_metadata = "0.15.2"
target-lexicon = { version = "0.12.5", features = ["std"] }
console = "0.15.5"
indicatif = "0.17.3"
rayon = "1.6.1"
once_cell = { version = "1.17.0", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1"
rustc_version = "0.4.0"
sha3 = "0.10.6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[workspace]
exclude = [
    "multivers-runner",
    "tests/test-argv",
    "tests/test-nothing",
    "tests/test-useless-computation",
]

[profile.release]
lto = true
strip = "symbols"
