[package]
name = "cargo-multivers"
version = "0.5.0"
description = "Cargo subcommand to build multiple versions of the same binary, each with a different CPU features set, merged into a single portable optimized binary"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "command-line-utilities",
    "development-tools::cargo-plugins",
]
keywords = ["performance", "optimization", "cargo", "cpu", "features"]
rust-version = "1.70"
repository = "https://github.com/ronnychevalier/cargo-multivers"
include = [
    "README.md",
    "CHANGELOG.md",
    "/src/*",
    "/LICENSE*",
    "/multivers-runner/src/*.rs",
    "/multivers-runner/src/build/*.rs",
    "/multivers-runner/build.rs",
    "/multivers-runner/Cargo.*",
]

[dependencies]
anyhow = "1"
escargot = "0.5"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-cargo = { version = "0.13", features = ["cargo_metadata"] }
cargo_metadata = "0.18"
target-lexicon = { version = "0.12", features = ["std"] }
console = "0.15"
indicatif = "0.17"
rayon = "1.8"
once_cell = { version = "1.18", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
rustc_version = "0.4"
sha3 = "0.10"
serde_json = "1"
itertools = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[workspace]
exclude = [
    "multivers-runner",
    "tests/test-argv",
    "tests/test-nothing",
    "tests/test-useless-computation",
]

[profile.release]
lto = true
strip = "symbols"
