[package]
name = "cargo-multivers"
version = "0.8.1"
description = "Cargo subcommand to build multiple versions of the same binary, each with a different CPU features set, merged into a single portable optimized binary"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "command-line-utilities",
    "development-tools::cargo-plugins",
]
keywords = ["performance", "optimization", "cargo", "cpu", "multivers"]
rust-version = "1.74"
repository = "https://github.com/ronnychevalier/cargo-multivers"
include = ["README.md", "CHANGELOG.md", "/src/*", "/LICENSE*"]

[dependencies]
anyhow = "1.0.70"
escargot = "0.5.8"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-cargo = { version = "0.14", features = ["cargo_metadata"] }
cargo_metadata = "0.18"
target-lexicon = { version = "0.12", features = ["std"] }
console = "0.15"
indicatif = "0.17"
rayon = "1.8"
serde = { version = "1.0.184", features = ["derive"] }
sha3 = "0.10"
serde_json = "1"
itertools = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.8.1"

[profile.release]
lto = true
strip = "symbols"

[workspace]
resolver = "2"
members = ["multivers-runner"]
exclude = [
    "tests/test-argv",
    "tests/test-nothing",
    "tests/test-useless-computation",
    "tests/test-workspace",
]

[workspace.lints.rust]
missing_docs = "warn"
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
rust_2024_compatibility = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic_in_result_fn = "warn"
dbg_macro = "warn"
panic = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
use_debug = "warn"
cargo = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"

[lints]
workspace = true
