[package]
name = "multivers-runner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1"
notstd_detect = "0.2.0"
proc-exit = "2"
qbsdiff = "1.4.0"
bzip2 = { version = "0.4", features = ["static"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tempfile = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38", default-features = false, features = ["fs"] }
libc = "0.2"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = { version = "1.0", default-features = false }
qbsdiff = "1.4.0"
bzip2 = { version = "0.4", features = ["static"] }
proc-exit = "2"
