[package]
name = "multivers-runner"
version = "0.1.5"
description = "Library to create a portable binary that embeds multiple versions of an executable each using a different CPU feature set"
edition.workspace = true
readme = "README.md"
license.workspace = true
categories = ["hardware-support"]
keywords = ["performance", "optimization", "cargo", "cpu", "multivers"]
repository.workspace = true

[dependencies]
cfg-if = "1"
notstd_detect = "0.6.0"
proc-exit = "2"
qbsdiff = "1.4.0"
bzip2 = { version = "0.5", features = ["static"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tempfile = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", default-features = false, features = ["fs"] }
libc = "0.2"

[build-dependencies]
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1"
quote = { version = "1.0.29", default-features = false }
qbsdiff = "1.4.0"
bzip2 = { version = "0.5", features = ["static"] }
proc-exit = "2"

[lints]
workspace = true
